--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,3 +17,11 @@ updates:
     ignore:
       - dependency-name: golang
         update-types: ["version-update:semver-minor"]
+
+  - package-ecosystem: "docker"
+    directory: "/node:16"
+    schedule:
+      interval: "daily"
+    ignore:
+      - dependency-name: node
+        update-types: ["version-update:semver-minor"]
