--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,3 +25,11 @@ updates:
     ignore:
       - dependency-name: node
         update-types: ["version-update:semver-major"]
+
+  - package-ecosystem: "docker"
+    directory: "/node:18"
+    schedule:
+      interval: "daily"
+    ignore:
+      - dependency-name: node
+        update-types: ["version-update:semver-major"]
