--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -40,4 +40,4 @@ updates:
       interval: "daily"
     ignore:
       - dependency-name: golang
-        update-types: ["version-update:semver-minor"]
+        update-types: ["version-update:semver-patch"]
