--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -41,3 +41,11 @@ updates:
     ignore:
       - dependency-name: golang
         update-types: ["version-update:semver-major", "version-update:semver-minor", "version-update:semver-patch"]
+
+  - package-ecosystem: docker
+    directory: /python:3
+    schedule:
+      interval: daily
+    ignore:
+      - dependency-name: python
+        update-types: [version-update:semver-major]
