--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -57,3 +57,11 @@ updates:
     ignore:
       - dependency-name: python
         update-types: [version-update:semver-major, version-update:semver-minor]
+
+  - package-ecosystem: docker
+    directory: /python:3.11
+    schedule:
+      interval: daily
+    ignore:
+      - dependency-name: python
+        update-types: [version-update:semver-major, version-update:semver-minor]
