--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -54,7 +54,7 @@ jobs:
           tags: ghcr.io/atomatt/images-mirror/golang
           
       - name: Build golang:1.20
-        id: build-golang-1.20
+        id: build-golang--1-20
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: ./golang
