--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -57,6 +57,6 @@ jobs:
         id: build-golang--1-20
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
-          context: ./golang
+          context: ./golang:1.20
           push: ${{ github.event_name != 'pull_request' }}
           tags: ghcr.io/atomatt/images-mirror/golang:1.20
