--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -81,3 +81,8 @@ updates:
     ignore:
       - dependency-name: golang
         update-types: [version-update:semver-major, version-update:semver-minor]
+
+  - package-ecosystem: docker
+    directory: /keycloak
+    schedule:
+      interval: daily
